--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,6 +8,20 @@ build:
       context: employee-service
       docker:
         dockerfile: Dockerfile
+    - image: salary-service
+      context: salary-service
+      docker:
+        dockerfile: Dockerfile
+portForward:
+  - resourceType: service
+    resourceName: employee-service
+    port: 80
+    localPort: 8080
+  - resourceType: service
+    resourceName: salary-service
+    port: 80
+    localPort: 8081
 manifests:
   rawYaml:
     - employee-service/k8s/*
+    - salary-service/k8s/*
