Make the readiness of the employee service depend on the salary service

--- a/employee-service/src/main/resources/application.yaml
+++ b/employee-service/src/main/resources/application.yaml
@@ -9,6 +9,9 @@ server:
 management:
   endpoint:
     health:
+      group:
+        readiness:
+          include: readinessState,salary
       probes:
         enabled: true
       show-details: always
