Config Skafold to use Paketo Buildpacks as a builder

--- a/employee-service/k8s/employee-service.yml
+++ b/employee-service/k8s/employee-service.yml
@@ -39,7 +39,7 @@ spec:
               value: saeed
             - name: SPRING_R2DBC_PASSWORD
               value: p@ssw0rd
-            - name: SALARY-SERVICE_URL
+            - name: SALARY_SERVICE_URL
               value: http://salary-service
 
 ---
