--- a/employee-service/src/main/resources/application.yaml
+++ b/employee-service/src/main/resources/application.yaml
@@ -16,5 +16,20 @@ management:
         enabled: true
       show-details: always
       show-components: always
+  endpoints:
+    web:
+      exposure:
+        include:  health, heapdump, info, metrics, prometheus
+  info:
+    env:
+      enabled: true
+    java:
+      enabled: true
+    os:
+      enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
+
 salary-service:
   url: "http://localhost:8081"
