--- a/employee-service/pom.xml
+++ b/employee-service/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-bindings</artifactId>
+            <version>2.0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
