Refactor PostgreSQL configuration to use Kubernetes secrets for sensitive data

--- a/salary-service/k8s/postgresql.yml
+++ b/salary-service/k8s/postgresql.yml
@@ -18,11 +18,20 @@ spec:
           image: postgres:15.3
           env:
             - name: POSTGRES_USER
-              value: saeed
+              valueFrom:
+                secretKeyRef:
+                  name: salary-postgres-secret
+                  key: username
             - name: POSTGRES_PASSWORD
-              value: p@ssw0rd
+              valueFrom:
+                secretKeyRef:
+                  name: salary-postgres-secret
+                  key: password
             - name: POSTGRES_DB
-              value: salary
+              valueFrom:
+                secretKeyRef:
+                  name: salary-postgres-secret
+                  key: database
 
 ---
 
