Refactor PostgreSQL service binding configuration to remove redundant metadata and improve clarity

--- a/employee-service/k8s/postgresql-binding.yml
+++ b/employee-service/k8s/postgresql-binding.yml
@@ -3,6 +3,8 @@ kind: ServiceBinding
 metadata:
   name: employee-postgres-binding
 spec:
+  type: postgresql
+  provider: postgresql
   workload:
     apiVersion: apps/v1
     kind: Deployment
